Adding startup diagnostic info
Will print as much info as we have access to under the running .NET
platform, i.e. .NET Framework currently gives us access to more
environment info (will change with .NET Standard 2.0)

--- a/src/Tug.Server/project.json
+++ b/src/Tug.Server/project.json
@@ -71,6 +71,11 @@
 
   "frameworks": {
     "netcoreapp1.1": {
+      "buildOptions": {
+        "define": [
+          "DOTNET_CORE"
+        ]
+      },
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
@@ -81,6 +86,11 @@
       "imports": "dnxcore50"
     },
     "net452": {
+      "buildOptions": {
+        "define": [
+          "DOTNET_FRAMEWORK"
+        ]
+      },
       "dependencies": {
       }
     }
