--- a/test/run-net452/nlog.config
+++ b/test/run-net452/nlog.config
@@ -21,11 +21,11 @@
     </target>
 
     <!-- write logs to file -->
-    <target xsi:type="File" name="allfile" fileName="nlog-all-${shortdate}.log"
+    <target xsi:type="File" name="allfile" fileName="${environment:variable=TUG_RT_STARTDIR}/_IGNORE/nlog-all-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|${message} ${exception}" />
 
 
-    <target xsi:type="File" name="ownFile-web" fileName="nlog-own-${shortdate}.log"
+    <target xsi:type="File" name="ownFile-web" fileName="${environment:variable=TUG_RT_STARTDIR}/_IGNORE/nlog-own-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|${message} ${exception}" />
 
     <target xsi:type="Null" name="blackhole" />
