--- a/src/Tug.Server/project.json
+++ b/src/Tug.Server/project.json
@@ -56,6 +56,7 @@
     "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
     "Microsoft.Extensions.Configuration.CommandLine": "1.1.0",
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0",
 
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.Routing": "1.1.0",
