Adding support for strict-type configuration binding

--- a/src/Tug.Server/appsettings.json
+++ b/src/Tug.Server/appsettings.json
@@ -1,4 +1,9 @@
 {
-    "DebugLog": "true",
-    "LogType": "console"
+    "logSettings": {
+        "LogType": "nlog",
+        "DebugLog": "true"
+    },
+    "appSettings": {
+
+    }
 }
