Cleaning up NLog config
Adding logging exceptions to console and files

--- a/test/run-net452/nlog.config
+++ b/test/run-net452/nlog.config
@@ -5,11 +5,12 @@
       internalLogLevel="Warn"
       internalLogFile="c:\temp\internal-nlog.txt">
 
-  <!-- define various log targets -->
+  <!-- Define various log targets -->
   <targets>
-    <target xsi:type="ColoredConsole" name="console">
-            <!--encoding="Encoding"
-            layout="Layout"
+    <target xsi:type="ColoredConsole" name="console"
+            layout="${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}">
+            <!--
+            encoding="Encoding"
             header="Layout"
             footer="Layout"
             useDefaultRowHighlightingRules="Boolean"
@@ -17,16 +18,20 @@
             detectConsoleAvailable="Boolean">
       <highlight-row backgroundColor="Enum" condition="Condition" foregroundColor="Enum"/>
       <highlight-word backgroundColor="Enum" foregroundColor="Enum" ignoreCase="Boolean"
-                      regex="String" text="String" wholeWords="Boolean" compileRegex="Boolean"/> -->
+                      regex="String" text="String" wholeWords="Boolean" compileRegex="Boolean"/>
+            -->
     </target>
 
-    <!-- write logs to file -->
+    <!--
+      - We define these to output to files under the
+      - _IGNORE path so that they are ignored by Git
+      -->
+
+    <!-- Write logs to file(s) -->
     <target xsi:type="File" name="allfile" fileName="${environment:variable=TUG_RT_STARTDIR}/_IGNORE/nlog-all-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|${message} ${exception}" />
-
-
+            layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|${message} ${exception:format=tostring}" />
     <target xsi:type="File" name="ownFile-web" fileName="${environment:variable=TUG_RT_STARTDIR}/_IGNORE/nlog-own-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|${message} ${exception}" />
+            layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|${message} ${exception:format=tostring}" />
 
     <target xsi:type="Null" name="blackhole" />
   </targets>
@@ -40,4 +45,5 @@
     <logger name="Microsoft.*" minlevel="Trace" writeTo="blackhole" final="true" />
     <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
   </rules>
+  
 </nlog>
