--- a/src/Tug.Server/project.json
+++ b/src/Tug.Server/project.json
@@ -97,6 +97,10 @@
         ]
       },
       "dependencies": {
+        // This one is specific to .NET Framework only
+        "Tug.Server.Providers.Ps5DscHandler": {
+          "target": "project"
+        }
       }
     }
   }
