Transitioning to dynamically discovered providers
* Removing hard-coded ref from Tug server to PS5 impl
* Updating app settings to use dynamically discovered impls and indicate
the PS5 provider

--- a/src/Tug.Server/project.json
+++ b/src/Tug.Server/project.json
@@ -100,10 +100,10 @@
         ]
       },
       "dependencies": {
-        // This one is specific to .NET Framework only
-        "Tug.Server.Providers.Ps5DscHandler": {
-          "target": "project"
-        }
+        // // This one is specific to .NET Framework only
+        // "Tug.Server.Providers.Ps5DscHandler": {
+        //   "target": "project"
+        // }
       }
     }
   }
