Needed for RegKey authorization computations (SHA-256 & HMAC)

--- a/src/Tug.Client/project.json
+++ b/src/Tug.Client/project.json
@@ -42,7 +42,8 @@
         // For System.Net.WebProxy and others
         "System.Net.Primitives": "4.3.0",
         "System.Net.NameResolution": "4.3.0",
-        "System.Net.NetworkInformation": "4.3.0"
+        "System.Net.NetworkInformation": "4.3.0",
+        "System.Security.Cryptography.Algorithms": "4.3.0"
       }
     },
     "net452": {
