--- a/src/Tug.Client/project.json
+++ b/src/Tug.Client/project.json
@@ -15,6 +15,11 @@
     "Microsoft.Extensions.Logging.Console": "1.1.0",
     "NLog.Extensions.Logging": "1.0.0-rtm-alpha5",
     "Microsoft.Extensions.CommandLineUtils": "1.1.0",
+    "Microsoft.Extensions.Configuration.Json": "1.1.0",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
+    "Microsoft.Extensions.Configuration.CommandLine": "1.1.0",
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0",
+    "Microsoft.Extensions.Configuration.Binder": "1.1.0",
     
     "Newtonsoft.Json": "9.0.1",
 
