Disabling common, harmless warnings for AV CI
Warnings are reported on the error stream for `dotnet build` and
AppVeyor thinks they are build-failing errors, disabling the harmless
warnings to allow builds to continue...for now

--- a/src/Tug.Client/project.json
+++ b/src/Tug.Client/project.json
@@ -8,7 +8,11 @@
   "buildOptions": {
     "debugType": "portable",
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "nowarn": [
+      "CS0169", // The field 'X' is never used
+      "CS0649"  // Field 'X' is never assigned to, and will always have its default value null
+    ]
   },
 
   "dependencies": {
