--- a/src/Tug.Server/project.json
+++ b/src/Tug.Server/project.json
@@ -8,7 +8,11 @@
 
   "buildOptions": {
     "debugType": "portable",
-    "emitEntryPoint": true
+    "emitEntryPoint": true,
+    "nowarn": [
+      "CS0169", // The field 'X' is never used
+      "CS0649"  // Field 'X' is never assigned to, and will always have its default value null
+    ]
 
     // TODO:  Temporarily disabled because it causes an error at build "The given key
     // was not present in the dictionary." when we added a project dependency to
