Adding static DSC config, MOF file and checksum to support unit test

--- a/tools/ci/DSC/.gitignore
+++ b/tools/ci/DSC/.gitignore
@@ -1,1 +1,4 @@
-*.mof
+## Ignore all the generated MOF files of child config folders
+## Note, this will *NOT* ignore any MOF files that are in the
+## immediately current folder, such as fixed static MOF files
+*/*.mof
