Toning down the log verbosity to the console for integration tests

--- a/test/server/Tug.Server-itests/nlog.config
+++ b/test/server/Tug.Server-itests/nlog.config
@@ -42,7 +42,7 @@
 
   <rules>
     <!--All logs, including from Microsoft-->
-    <logger name="*" minlevel="Debug" writeTo="console" />
+    <logger name="*" minlevel="Information" writeTo="console" />
     <logger name="*" minlevel="Trace" writeTo="allfile" />
 
     <!--Skip Microsoft logs and so log only own logs-->
