Fixing deps and process for assembling the binary components
* PS5 Handler needs to be loaded separately from extensions path
* We slim that down to only the components that are different or unique
to PS5 Handler

--- a/src/posh/Tug.Server-ps5/project.json
+++ b/src/posh/Tug.Server-ps5/project.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "Tug.Server": {
       "target": "project"
-    },
-    "Tug.Server.Providers.Ps5DscHandler": {
-      "target": "project"
     }
+    // ,
+    // "Tug.Server.Providers.Ps5DscHandler": {
+    //   "target": "project"
+    // }
   },
   
   "frameworks": {
