Comment to clarify meaning and intent

--- a/src/Tug.Server/project.json
+++ b/src/Tug.Server/project.json
@@ -91,6 +91,7 @@
       ],
       "dependencies": {
         "Microsoft.NETCore.App": {
+          // This will generate a framework-dependent deployment
           "type": "platform",
           "version": "1.0.1"
         },
