Adding sample typical configuration settings for SendReport message

--- a/src/Tug.Client/appsettings.json
+++ b/src/Tug.Client/appsettings.json
@@ -42,7 +42,7 @@
                "ProxyAddress": "http://localhost:8888"
             }
         }
-    }
+    },
     // ,
     // "stuff": [
     //     "one",
@@ -51,4 +51,39 @@
     // ],
     // "moreStuff": "moreValue",
     // "lessStuff": null
+
+    "SendReport": {
+        "CommonDefaults": {
+            "OperationType": "Consistency",
+            "ReportFormatVersion": "2.0",
+            "StartTime": "%NOW%",
+            "AdditionalData": [
+                {
+                    "Key": "OSVersion",
+                    "Value": "{\"VersionString\":\"Microsoft Windows NT 10.0.14393.0\",\"ServicePack\":\"\",\"Platform\":\"Win32NT\"}"
+                },
+                {
+                    "Key": "PSVersion",
+                    "Value": "{\"CLRVersion\":\"4.0.30319.42000\",\"PSVersion\":\"5.1.14393.576\",\"BuildVersion\":\"10.0.14393.576\"}"
+                }
+            ]
+        },
+        "Profiles": {
+            "SimpleInventoryDefaults": {
+                "NodeName": "HOST_NAME",
+                "IpAddress": "127.0.0.1;::1",
+                "LCMVersion": "2.0"
+            },
+
+            "DetailedStatusDefaults": {
+                "RefreshMode": "Pull",
+                "Status": "Success",
+                "EndTime": "%NOW%",
+                "ConfigurationVersion": "2.0",
+                "RebootRequested": "False"
+            },
+
+            "ErrorDefaults": { }
+        }
+    }
 }
