--- a/src/Tug.Server.Base/project.json
+++ b/src/Tug.Server.Base/project.json
@@ -11,7 +11,13 @@
     "nowarn": [
       "CS0169", // The field 'X' is never used
       "CS0649"  // Field 'X' is never assigned to, and will always have its default value null
-    ]
+    ],
+    "compile": {
+      "includeFiles": [
+        "../shared/SharedAssemblyInfo.cs",
+        "../shared/SharedAssemblyVersionInfo.cs"
+      ]
+    }
   },
 
   "dependencies": {
