--- a/src/Tug.Server.Providers.Ps5DscHandler/project.json
+++ b/src/Tug.Server.Providers.Ps5DscHandler/project.json
@@ -1,12 +1,26 @@
 {
-  "version": "0.5.1-*",
+  // Assembly Manifest Details are defined in
+  // AssemblyInfo.cs and SharedAssemblyInfo.cs
+
+  "authors": [
+    "github.com/PowerShellOrg/tug/graphs/contributors"
+  ],
+  "language": "en-US",
 
   "buildOptions": {
     "debugType": "portable",
     "nowarn": [
       "CS0169", // The field 'X' is never used
       "CS0649"  // Field 'X' is never assigned to, and will always have its default value null
-    ]
+    ],
+
+    "compile": {
+      "includeFiles": [
+        // Include in the shared assembly manifest details
+        "../shared/SharedAssemblyInfo.cs",
+        "../shared/SharedAssemblyVersionInfo.cs"
+      ]
+    }
   },
 
   "dependencies": {
