--- a/src/bundles/Tug.Server-ps5/project.json
+++ b/src/bundles/Tug.Server-ps5/project.json
@@ -1,13 +1,26 @@
 {
-  "name": "Tug.Server-ps5",
-  "version": "0.5.1-*",
-  "copyright": "Copyright © 2016 The DevOps Collective, Inc. All rights reserved. Licnesed under GNU GPL v3.",
-  "title": "Tug Server PowerShell Module",
-  "authors": ["Don Jones"],
+  // Assembly Manifest Details are defined in
+  // AssemblyInfo.cs and SharedAssemblyInfo.cs
+
+  "authors": [
+    "github.com/PowerShellOrg/tug/graphs/contributors"
+  ],
   "language": "en-US",
 
   "buildOptions": {
-    "debugType": "portable"
+    "debugType": "portable",
+    "nowarn": [
+      "CS0169", // The field 'X' is never used
+      "CS0649"  // Field 'X' is never assigned to, and will always have its default value null
+    ],
+
+    "compile": {
+      "includeFiles": [
+        // Include in the shared assembly manifest details
+        "../shared/SharedAssemblyInfo.cs",
+        "../shared/SharedAssemblyVersionInfo.cs"
+      ]
+    }
   },
 
   "dependencies": {
