--- a/src/Tug.Server.Base/project.json
+++ b/src/Tug.Server.Base/project.json
@@ -1,9 +1,10 @@
 {
-  "name": "Tug.Server.Base",
-  "version": "0.5.1-*",
-  "copyright": "Copyright © 2016 The DevOps Collective, Inc. All rights reserved. Licnesed under GNU GPL v3.",
-  "title": "Tug Server Abstractions",
-  "authors": ["Don Jones"],
+  // Assembly Manifest Details are defined in
+  // AssemblyInfo.cs and SharedAssemblyInfo.cs
+
+  "authors": [
+    "github.com/PowerShellOrg/tug/graphs/contributors"
+  ],
   "language": "en-US",
 
   "buildOptions": {
@@ -12,8 +13,10 @@
       "CS0169", // The field 'X' is never used
       "CS0649"  // Field 'X' is never assigned to, and will always have its default value null
     ],
+
     "compile": {
       "includeFiles": [
+        // Include in the shared assembly manifest details
         "../shared/SharedAssemblyInfo.cs",
         "../shared/SharedAssemblyVersionInfo.cs"
       ]
