Fixing PS5 Handler for interface changes
Also fixing path to Shared assembly manifest file.

--- a/src/bundles/Tug.Server-ps5/project.json
+++ b/src/bundles/Tug.Server-ps5/project.json
@@ -17,8 +17,8 @@
     "compile": {
       "includeFiles": [
         // Include in the shared assembly manifest details
-        "../shared/SharedAssemblyInfo.cs",
-        "../shared/SharedAssemblyVersionInfo.cs"
+        "../../shared/SharedAssemblyInfo.cs",
+        "../../shared/SharedAssemblyVersionInfo.cs"
       ]
     }
   },
