Adding support for Report handling to the bundled Basic script

--- a/src/bundles/Tug.Server-ps5/posh-res/samples/appsettings.json
+++ b/src/bundles/Tug.Server-ps5/posh-res/samples/appsettings.json
@@ -39,9 +39,15 @@
                 // of the same set of app settings to configure behavior (below)
                 "BootstrapScript": "$basic = [System.IO.Path]::GetFullPath(\"..\\BasicTugCmdlets.ps1\")\r\necho \"Loading BASIC from [$basic]\"\r\n. ..\\BasicTugCmdlets.ps1",
 
+                // Semi-colon-separated list of files to watch for PowerShell "reload"
+                // Uncomment this to automatically reload PowerShell Runspace whenever
+                // the bootstrap script changes -- useful during development & testing
+                //"BootstrapWatch": "..\\BasicTugCmdlets.ps1",
+
                 "RegistrationSavePath": "var/DscService/Registrations",
                 "ConfigurationPath": "var/DscService/Configuration",
-                "ModulePath": "var/DscService/Modules"
+                "ModulePath": "var/DscService/Modules",
+                "ReportsPath": "var/DscService/Reports"
             }
         }
     }
