--- a/src/Tug.Server.FaaS.AwsLambda/project.json
+++ b/src/Tug.Server.FaaS.AwsLambda/project.json
@@ -61,7 +61,6 @@
       "version": "1.3.0-preview1"
     },
 
-
     "Tug.Base": {
       "target": "project"
     },
@@ -82,9 +81,9 @@
     ]
   },
 
-  "scripts": {
-    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
-  },
+  // "scripts": {
+  //   "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
+  // },
 
   "frameworks": {
     "netcoreapp1.0": {
