--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,5 @@ _Pvt_Extensions
 .fake/
 .DS_Store
 **/_IGNORE
+src/Tug.Server.FaaS.AwsLambda/deploy-serverless.cmd
+src/Tug.Server.FaaS.AwsLambda/aws-lambda-tools-defaults.json
