--- a/src/Tug.Server.FaaS.AwsLambda/project.json
+++ b/src/Tug.Server.FaaS.AwsLambda/project.json
@@ -26,39 +26,42 @@
   "dependencies": {
     "Microsoft.NETCore.App": {
       "type": "platform",
-      "version": "1.0.1"
+      "version": "1.1.2"
     },
 
-    "Microsoft.Extensions.Configuration.Json": "1.1.0",
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
-    "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
-    "Microsoft.Extensions.Configuration.Binder": "1.1.0",
-    "Microsoft.Extensions.Logging": "1.1.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
+    "Microsoft.Extensions.Configuration.Json": "1.1.2",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.2",
+    "Microsoft.Extensions.Configuration.FileExtensions": "1.1.2",
+    "Microsoft.Extensions.Configuration.Binder": "1.1.2",
+    "Microsoft.Extensions.Logging": "1.1.2",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.2",
 
     // For testing out on dev-local
-    "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.1.2",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.2",
 
-    "Microsoft.AspNetCore.Hosting": "1.1.0",
-    "Microsoft.AspNetCore.Mvc": "1.1.1",
-    "Microsoft.AspNetCore.Routing": "1.1.0",
+    "Microsoft.AspNetCore.Hosting": "1.1.2",
+    "Microsoft.AspNetCore.Mvc": "1.1.3",
+    "Microsoft.AspNetCore.Routing": "1.1.2",
 
-    "AWSSDK.Core": "3.3.8.2",
-    "AWSSDK.Extensions.NETCore.Setup": "3.3.0.3",
-    "AWSSDK.DynamoDBv2": "3.3.2.1",
-    "AWSSDK.S3": "3.3.5.7",
-    "AWSSDK.CloudFront": "3.3.2.3",
+    "AWSSDK.Core": "3.3.14.2",
+    "AWSSDK.IdentityManagement":"3.3.4",
+    "AWSSDK.CloudFormation":"3.3.5.3",
+    "AWSSDK.Extensions.NETCore.Setup": "3.3.1",
+    "AWSSDK.DynamoDBv2": "3.3.4.13",
+    "AWSSDK.S3": "3.3.7",
+    "AWSSDK.CloudFront": "3.3.4.1",
+    "AWSSDK.Lambda":"3.3.7",
 
     "Amazon.Lambda.Core": "1.0.0",
-    "Amazon.Lambda.APIGatewayEvents": "1.0.2",
-    "Amazon.Lambda.Serialization.Json": "1.0.1",
-    "Amazon.Lambda.AspNetCoreServer": "0.9.0-preview1",
-    "Amazon.Lambda.Logging.AspNetCore": "1.0.0",
+    "Amazon.Lambda.APIGatewayEvents": "1.1.0",
+    "Amazon.Lambda.Serialization.Json": "1.1.0",
+    "Amazon.Lambda.AspNetCoreServer": "0.10.2-preview1",
+    "Amazon.Lambda.Logging.AspNetCore": "1.1.0",
     
     "Amazon.Lambda.Tools": {
       "type": "build",
-      "version": "1.3.0-preview1"
+      "version": "1.6.0"
     },
 
     "Tug.Base": {
@@ -70,7 +73,7 @@
   },
 
   "tools": {
-    "Amazon.Lambda.Tools" : "1.3.0-preview1"
+    "Amazon.Lambda.Tools" : "1.6.0"
   },
 
   "publishOptions": {
