--- a/src/Tug.Server/project.json
+++ b/src/Tug.Server/project.json
@@ -62,22 +62,22 @@
   },
 
   "dependencies": {
-    "Microsoft.Extensions.Logging.Console": "1.1.0",
-    "NLog.Extensions.Logging": "1.0.0-rtm-alpha5",
+    "Microsoft.Extensions.Logging.Console": "1.1.2",
+    "NLog.Web.AspNetCore": "4.4.1",
 
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
-    "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
-    "Microsoft.Extensions.Configuration.Json": "1.1.0",
-    "Microsoft.Extensions.Configuration.CommandLine": "1.1.0",
-    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.2",
+    "Microsoft.Extensions.Configuration.FileExtensions": "1.1.2",
+    "Microsoft.Extensions.Configuration.Json": "1.1.2",
+    "Microsoft.Extensions.Configuration.CommandLine": "1.1.2",
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.2",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.2",
 
-    "Microsoft.AspNetCore.Diagnostics": "1.1.0",
-    "Microsoft.AspNetCore.Routing": "1.1.0",
-    "Microsoft.AspNetCore.Mvc": "1.1.1",
+    "Microsoft.AspNetCore.Diagnostics": "1.1.2",
+    "Microsoft.AspNetCore.Routing": "1.1.2",
+    "Microsoft.AspNetCore.Mvc": "1.1.3",
 
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.2",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.1.2",
 
     "Tug.Base": {
       "target": "project"
@@ -102,7 +102,7 @@
         "Microsoft.NETCore.App": {
           // This will generate a framework-dependent deployment
           "type": "platform",
-          "version": "1.0.1"
+          "version": "1.1.2"
         },
         "System.Security.Cryptography.Algorithms": "4.3.0"
       }
