cleaning up and expanding custom assertions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,17 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     "cSpell.words": [
+        "ASMNAME",
         "asms",
         "assms",
         "authz",
         "csum",
         "dotnetfw",
+        "dyna",
         "ext",
-        "rtasm"
+        "finalizer",
+        "nlog",
+        "rtasm",
+        "uncomment"
     ]
 }
