--- a/TugDSC.common.props
+++ b/TugDSC.common.props
@@ -1,5 +1,10 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
+  <PropertyGroup>
+    <!-- We define this flag to allow us to guard against multiple imports -->
+    <TugDSC_common_props>true</TugDSC_common_props>
+  </PropertyGroup>
+
   <!--
     - References:
     -   * https://docs.microsoft.com/en-us/dotnet/core/tools/csproj
