--- a/src/TugDSC.Server.WebAppHost/TugDSC.Server.WebAppHost.csproj
+++ b/src/TugDSC.Server.WebAppHost/TugDSC.Server.WebAppHost.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <Import Project="$(MSBuildThisFileDirectory)/../../TugDSC.common.props" />
-  <Import Project="$(MSBuildThisFileDirectory)/../../TugDSC.sharedasm.props" />
+  <Import Project="$(MSBuildThisFileDirectory)/../../TugDSC.common.props"
+      Condition="'$(TugDSC_common_props)' == ''" />
+  <Import Project="$(MSBuildThisFileDirectory)/../../TugDSC.sharedasm.props"
+      Condition="'$(TugDSC_sharedasm_props)' == ''" />
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
