Adding a new bundle for a Basic TugDSC setup
Using a new approach to building the bundle, starting over with a Basic bundle setup, will then create others based on this model.

--- a/.gitignore
+++ b/.gitignore
@@ -234,5 +234,6 @@ _Pvt_Extensions
 .fake/
 .DS_Store
 **/_IGNORE
+**/_TMP
 src/Tug.Server.FaaS.AwsLambda/deploy-serverless.cmd
 src/Tug.Server.FaaS.AwsLambda/aws-lambda-tools-defaults.json
